# AI-Product-Curator

AI-product-backend-phase-2/: .dockerignore  .gitignore  2.2.3  Dockerfile  __init__.py  alembic.ini  main.py  pyproject.toml  render.yaml  requirements.txt  validate_scoring.py
AI-product-backend-phase-2/ai/: __init__.py  llm_client.py  prompts.py  scraper.py  workflow.py
AI-product-backend-phase-2/ai/agents/: __init__.py  base.py  business_analytics.py  consumer_recommender.py  data_collector.py  data_processor.py  query_handler.py
AI-product-backend-phase-2/alembic/: env.py
AI-product-backend-phase-2/alembic/versions/: 20260127_021550_2d0ca7f7425a_initial_migration_with_all_models.py  20260221_120000_add_user_id_to_user_searches.py  20260221_190000_add_results_data_to_user_searches.py
AI-product-backend-phase-2/auth/: dependencies.py  schemas.py  security.py  service.py
AI-product-backend-phase-2/business/: __init__.py  schemas.py
AI-product-backend-phase-2/config/: settings.py
AI-product-backend-phase-2/consumer/: __init__.py  schemas.py
AI-product-backend-phase-2/database/: connection.py  models.py  seed.py
AI-product-backend-phase-2/user_management/: models.py  rbac.py
AI-product-backend-phase-2/web/: __init__.py  app.py  dependencies.py
AI-product-backend-phase-2/web/routes/: auth.py  business.py  consumer.py
AI-product-web-phase-2/: .dockerignore  .env  CLAUDE.md  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
AI-product-web-phase-2/src/: App.css  App.tsx  index.css
AI-product-web-phase-2/src/api/: auth.api.ts  (+3 more)
(+24 files in other folders)
