[project]
name = "ai-product-curator-backend"
version = "0.1.0"
description = "AI-powered product curator backend API"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",

    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",

    # LLM & AI
    "langchain>=0.1.4",
    "langchain-community>=0.0.16",
    "langgraph>=0.0.20",
    "huggingface-hub>=0.20.3",
    "sentence-transformers>=2.3.1",
    "groq>=1.0.0",
    "tenacity>=8.2.3",

    # Web Scraping
    "lxml>=5.1.0",
    "requests>=2.31.0",
    "html2text>=2024.2.26",

    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.3",

    # Utilities
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=24.1.1",
]


[tool.uv]
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=24.1.1",
]
